--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
     "node-sass": "^7.0.1",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
